examples/test/testpolicy11517.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11517
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key6: value13
      key19: value13
      key31: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value22
          key14: value22
      podSelector:
        matchLabels:
          key9: value25
          key11: value49
          key38: value7
